# openEngine

./: CMakeLists.txt  README.md
docs/reports/: README.md  block01_types_and_error.md  block02_device.md  block03_command_buffer.md  block04_null_backend.md  block05_resources_build_test.md
include/targets/common/: api.h  buffer.h  command_buffer.h  device.h  error.h  pipeline.h  swapchain.h  sync.h  texture.h  types.h
targets/common/: backend_factory.cpp  backend_interface.h  buffer.cpp  command_buffer.cpp  debug_layer.cpp  debug_layer.h  device.cpp  device_context.cpp  device_context.h  error.cpp  handle_pool.h  pipeline.cpp  swapchain.cpp  sync.cpp  texture.cpp  validation.cpp  validation.h
targets/null/: null_backend.cpp  null_backend.h
tests/: common_api_test.cpp
